syntax = "proto3";

import "google/protobuf/timestamp.proto";
import "book_related.proto";

option csharp_namespace = "Bookx.ProtoServices";

package user_related;

service UserService {
  rpc GetSingleOwnedBook(SingleOwnedBookRequest) returns(SingleOwnedBook);
  rpc GetAllOwnedBooks(SingleUserRequest) returns(MultipleOwnedBooks);
}

message SingleOwnedBookRequest {
  int32 user_id = 1;
  int32 owned_book_id = 2;
}

message SingleOwnedBook {
  int32 id = 1;
  int32 user_id = 2;
  book_related.SingleBook Book = 3;
  int32 rating = 4;
  string comment = 5;
  bool would_recommend = 6;
}

message SingleUserRequest { int32 user_id = 1; }

message MultipleOwnedBooks {
  int32 user_id = 1;
  repeated SingleOwnedBook OwnedBooks = 2;
}
